; ModuleID = '/home/carl/AnghaBench/kphp-kdb/search/extr_search-data.c_set_rates.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/search/extr_search-data.c_set_rates.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i32, i32)* @set_rates to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @set_rates(i64 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i64 %0, i64* %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %8 = load i64, i64* %5, align 8
  %9 = load i32, i32* %6, align 4
  %10 = call i32 @set_rate_new(i64 %8, i32 0, i32 %9)
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %13, label %12

12:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %20

13:                                               ; preds = %3
  %14 = load i64, i64* %5, align 8
  %15 = load i32, i32* %7, align 4
  %16 = call i32 @set_rate_new(i64 %14, i32 1, i32 %15)
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %19, label %18

18:                                               ; preds = %13
  store i32 0, i32* %4, align 4
  br label %20

19:                                               ; preds = %13
  store i32 1, i32* %4, align 4
  br label %20

20:                                               ; preds = %19, %18, %12
  %21 = load i32, i32* %4, align 4
  ret i32 %21
}

declare dso_local i32 @set_rate_new(i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
